--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
             android:text="de" />
 
         <Spinner
-            android:id="@+id/spinnerfrom"
+            android:id="@+id/spinnerFrom"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
@@ -60,8 +60,8 @@
         android:text="Converter" />
 
     <TextView
-        android:id="@+id/resultado"
-        android:layout_width="125dp"
-        android:layout_height="60dp" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvResult"/>
 
 </LinearLayout>
